# alsa-mixer

./: .gitignore  LICENSE  alsa-mixer.cabal  changelog  default.nix  nixpkgs.lock.json  package.nix
Sound/ALSA/: Mixer.hs
Sound/ALSA/Mixer/: Internal.chs  Internal.hs  Templates.hs
