name:               alsa-mixer
version:            0.3.0
synopsis:           Bindings to the ALSA simple mixer API.
description:
  This package provides bindings to the ALSA simple mixer API.

license:            BSD3
license-file:       LICENSE
author:             Thomas Tuegel <ttuegel@mailbox.org>
maintainer:         Thomas Tuegel <ttuegel@mailbox.org>
copyright:          2014-2021 Thomas Tuegel
category:           Sound
build-type:         Simple
cabal-version:      >=1.8
homepage:           https://github.com/ttuegel/alsa-mixer
bug-reports:        https://github.com/ttuegel/alsa-mixer/issues
extra-source-files: changelog

source-repository head
  type:     git
  location: https://github.com/ttuegel/alsa-mixer.git

flag cross
  description: Set this flag if cross-compiling
  default:     False
  manual:      True

library
  exposed-modules: Sound.ALSA.Mixer
  other-modules:   Sound.ALSA.Mixer.Internal
  extra-libraries: asound
  build-depends:
      alsa-core  >=0.5 && <0.6
    , base       >=4   && <5
    , unix       >=2.6 && <3
